<resources>
    <string name="app_name">Framler</string>
    <string name="facebook_app_id">167190823687601</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splahlogo">splahlogo</string>
    <integer name="com_vk_sdk_AppId">5626746</integer>
    <string name="title_activity_loginscreen">loginscreen</string>
    <string name="logscreenbg">logscreenbg</string>
    <string name="login">вход</string>
    <string name="ВХОД">Вход</string>
    <string name="loginbg">loginbg</string>
    <string name="bottom_line">bottom_line</string>
    <string name="new_button">New Button</string>
    <string name="buttlog">buttlog</string>
    <string name="enter_login">ВВЕДИТЕ ЛОГИН И ПАРОЛЬ</string>
    <string name="login_strin">ЛОГИН</string>
    <string name="logstr">    ЛОГИН</string>
    <string name="icolog">icolog</string>
    <string name="icopas">icopas</string>
    <string name="horline">horline</string>
    <string name="orsocial">ИЛИ ЧЕРЕЗ СОЦИАЛЬНЫЕ СЕТИ</string>
    <string name="vklog">vklog</string>
    <string name="botl">botl</string>
    <string name="twitbt">twitbt</string>
    <string name="gbt">gbt</string>
    <string name="okbt">okbt</string>
    <string name="fbbt">fbbt</string>
    <string name="noacc">НЕТ АККАУНТА ?</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>

    <string name="title_activity_start">start</string>
    <string name="timetoday">60:00</string>
    <string name="startbgbt">startbgbt</string>
    <string name="startbgmd">startbgmd</string>
    <string name="startbgtop">startbgtop</string>
    <string name="start_btn">start_btn</string>
    <string name="start">START</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="you_have_for_today">YOU HAVE FOR TODAY</string>
    <string name="startstr">START</string>
    <string name="rating_btn">rating_btn</string>
    <string name="stat_btn">rating_btn</string>
    <string name="road_btn">rating_btn</string>
    <string name="all_ratings">ALL RATINGS</string>
    <string name="divline">divline</string>
    <string name="all_roads">ALL ROADS</string>
    <string name="all_statistic">ALL STATISTIC</string>
    <string name="lightningbt">lightningbt</string>
    <string name="timelapsbt">timelapsbt</string>
    <string name="ffbt">ffbt</string>
    <string name="unstopbt">unstopbt</string>
    <string name="megritmbt">megritmbt</string>
    <string name="lightning_bike">LIGHTNING BIKE</string>
    <string name="timelaps">TIMELAPS</string>
    <string name="fast_and_furious">FAST AND FURIOUS</string>
    <string name="unstopable">UNSTOPABLE</string>
    <string name="megarythm">MEGARYTHM</string>
    <string name="progres_bord">progres_bord</string>
    <string name="settbtn">settbtn</string>
    <string name="place_in_overall_rating">PLACE IN OVERALL RATING</string>
    <string name="upbbg">upbbg</string>
    <string name="black_dragon">BLACK DRAGON</string>
    <string name="vladimir_dimchenkevich">VLADIMIR DIMCHENKEVICH</string>
    <string name="_12321">12321</string>
    <string name="_65465">65465</string>
    <string name="prevplace">- - - - -</string>
    <string name="title_activity_registrationscreen">registrationscreen</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">registration</string>

    <string name="title_activity_regscreen">regscreen</string>
    <string name="fotoframe">fotoframe</string>
    <string name="regstr">ВВЕДИТЕ ДАННЫЕ ДЛЯ ВХОДА</string>
    <string name="email">EMAIL</string>
    <string name="pass">ПАРОЛЬ</string>
    <string name="divline2">divline</string>
    <string name="enternik">ВВЕДИТЕ ВАШ НИКНЕЙМ</string>
    <string name="nikjoke">(СОВЕТУЕМ ПРИДУМАТЬ ЧТО-ТО ОРИГИНАЛЬНОЕ :)</string>
    <string name="nikhelp">БУДЕТ ОТОБРАЖАТЬСЯ В РЕЙТИНГЕ</string>

    <string name="title_activity_resscreen">resscreen</string>
    <string name="mailico">mailico</string>
    <string name="nikstring">НИКНЕЙМ</string>
    <string name="nikico">nikico</string>
    <string name="namestring">ИМЯ</string>
    <string name="socenter">ИЛИ ВХОД ЧЕРЕЗ СОЦИАЛЬНЫЕ СЕТИ</string>
    <string name="goog">goog</string>
    <string name="twit">twit</string>
    <string name="okk">okk</string>
    <string name="fbk">fbk</string>
    <string name="vkb">vkb</string>
    <string name="family">ФАМИЛИЯ</string>
    <string name="youphoto">ВАШЕ ФОТО</string>

    <string name="title_activity_regscr">regscr</string>

    <string name="title_activity_addphoto">addphoto</string>
    <string name="go" />
    <string name="gogo">ПОЕХАЛИ!</string>
    <string name="familya">ФАМИЛИЯ</string>
    <string name="enterfio">ВВЕДИТЕ ВАШИ ИМЯ И ФАМИЛИЮ</string>
    <string name="vkreg">vkreg</string>
    <string name="fbreg">fbreg</string>
    <string name="okreg">okreg</string>
    <string name="twreg">twreg</string>
    <string name="ggreg">ggreg</string>
    <string name="pasico">pasico</string>
    <string name="nikicoreg">nikico</string>

    <string name="title_activity_photo_upload">photo_upload</string>
    <string name="btgall">btgall</string>
    <string name="btcamera">btcamera</string>
    <string name="user_photo">user_photo</string>
    <string name="youf">ВАШЕ ФОТО</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_facebook">FacebookActivity</string>
</resources>
